<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipe Bookmark</string>

    <string name="action_settings">Settings</string>

    <string name="button_saveRecipe">Save</string>

    <string name="menu_share">Share</string>
    <string name="menu_addRecipe">Add</string>
    <string name="menu_addRecipeSave">Save</string>
    <string name="menu_searchRecipe">Search</string>

    <string name="title_activity_add_recipe">Add New Recipe</string>
    <string name="title_activity_recipe_list">My Recipes</string>
    <string name="title_activity_view_recipe">View Recipe</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_ingredients">Ingredients</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_dialog_delete_recipe">Delete Recipe</string>

    <string name="hint_addRecipe_recipeName">Recipe Name</string>
    <string name="hint_addRecipe_recipeUrl">URL http://</string>

    <string name="label_recipeName">Recipe</string>
    <string name="label_recipeCourse">Course</string>
    <string name="label_recipeIngredient">Main Ingredient</string>
    <string name="label_settings_offline">Offline Viewing</string>
    <string name="label_settings_offline_title">Enable Offline Viewing</string>

    <string name="char_divider">|</string>

    <string name="message_delete">Are you sure you want to delete&#160;</string>


</resources>