<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddRecipe"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/linear_recipeName"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_recipeName"
            android:id="@+id/label_recipeName"
            android:textSize="21sp"
            android:textStyle="bold|italic" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_recipeName"
            android:hint="@string/hint_addRecipe_recipeName"
            android:layout_marginBottom="5dp"
            android:capitalize="words" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_recipeUrl"
            android:inputType="textUri"
            android:hint="@string/hint_addRecipe_recipeUrl"
            android:layout_marginBottom="5dp"
            android:autoLink="web" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_recipeCourse"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/linear_recipeName">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_recipeCourse"
            android:id="@+id/label_recipeCourse"
            android:textSize="21sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/spinner_recipeCourse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:spinnerMode="dialog" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_recipeIngredient"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/linear_recipeCourse">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_recipeIngredient"
            android:id="@+id/label_recipeIngredient"
            android:textSize="21sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/spinner_recipeIngredient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:spinnerMode="dialog" />

    </LinearLayout>

</RelativeLayout>
